src/cstgen/snapshots/fin__cstgen__tests__insta@expr_closure_with_typed_arg.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_closure_with_typed_arg.fin
---
File@0..14
  ItemExpr@0..14
    ExprClosure@0..14
      Pipe@0..1 "|"
      ArgList@1..8
        Arg@1..8
          ExprIdent@1..2
            Ident@1..2 "x"
          Colon@2..3 ":"
          Whitespace@3..4 " "
          ExprIdent@4..8
            Ident@4..8 "Type"
      Pipe@8..9 "|"
      Whitespace@9..10 " "
      ExprIdent@10..14
        Ident@10..14 "body"
