src/cstgen/snapshots/fin__cstgen__tests__insta@expr_field.fin.snap
---
source: src/cstgen/mod.rs
expression: tree
input_file: src/cstgen/snapshots/validation/expr_field.fin
---
File@0..7
  ItemExpr@0..7
    ExprField@0..7
      ExprIdent@0..3
        Ident@0..3 "foo"
      Dot@3..4 "."
      ExprIdent@4..7
        Ident@4..7 "bar"
